finalized for project submission

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+.Container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 70px;
+}
+
 .App {
+  background: linear-gradient(to right, #C6FFDD, #fbd786,#f7797d);
+  width: 25rem;
+  padding: 40px;
+  border-radius: 20px;
+  box-shadow: 5px 10px 20px 25px rgba(0,0,0,0.2);
+}
+
+h1 {
+  font-size: 2.3rem;
   text-align: center;
+  margin-bottom: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  border-radius: 20px;
+  padding: 10px;
+  margin: 15px;
+  font-size: 2rem;
+  color: black;
+  border: 3px solid gray;
+}
+
+input,
+button {
+  border-radius: 5px;
+  font-size: 20px;
+  padding: 8px;
+  text-align: center;
+}
+
+input {
+  display: block;
+  margin-left: 2rem;
+  margin-bottom: .9rem;
+  margin-top: 1.5rem;
+}
+
+button {
+  border: 1px solid gray;
+  background: whitesmoke;
+  margin: .2rem;
+}
+
+button:nth-last-child(2),
+button:nth-last-child(1) {
+  background: tomato;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
